docs: Added Swagger comments to all clients endpoints for API documentation
